# Rust-BE

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: build.yml  rust.yml  test.yml
abi/internal/: strategy_pool.json  strategy_pool_factory.json
db/: api.sql  dex_path_for_pair.sql  dex_paths.json  escrow_contract_address.sql  escrow_token_contract_address.sql  escrow_token_contract_address_extra.sql  model.sql  tbl.sql
docs/: README.md  services.json  user_alive_endpoints.json
docs/error_codes/: error_codes.md  error_codes_en.json
etc/: config.json  config_template.json
etc/systemd/: mc2fi_admin.service  mc2fi_asset_price.service  mc2fi_auth.service  mc2fi_escrow-watcher.service  mc2fi_escrow_watcher.service  mc2fi_portauth.service  mc2fi_portuser.service  mc2fi_trade-watcher.service  mc2fi_trade_watcher.service  mc2fi_user.service  mc2fi_watcher.service  mc2fi_watcher_test.service
examples/: populate_db.rs
examples/tools/: mod.rs
scripts/: deploy.sh  deploy_cross.sh  drop_and_recreate_database.sh  local_deploy.sh  remount_functions.sh  restart_services.sh  setup_database.sh  upload_docs.sh
src/codegen/: docs.rs  lib.rs  rust.rs  service.rs  sql.rs
src/cryptos/crypto/: lib.rs  openssl.rs  utils.rs
src/cryptos/ethereum/eth-sdk/: Cargo.toml
src/cryptos/ethereum/eth-sdk/src/: calldata.rs  conn.rs  contract.rs  erc20.rs  lib.rs  mock_erc20.rs  pool.rs  signer.rs  tx.rs  utils.rs
src/cryptos/token/: Cargo.toml
src/cryptos/token/src/: lib.rs
src/lib/: Cargo.toml  config.rs  database.rs  datatable.rs  handler.rs  log.rs  mod.rs  scheduler.rs  toolbox.rs  types.rs  utils.rs
src/lib/evm_parse/: mod.rs  tx.rs
src/lib/http/: server.rs
src/lib/rpc_provider/: connection.rs  pool.rs
src/lib/ws/: basics.rs  client.rs  conn.rs  headers.rs  push.rs  server.rs
src/model/: Cargo.toml  endpoint.rs  lib.rs  pg_func.rs  types.rs
src/service/: enums.rs  services.rs
src/service/admin/: Cargo.toml  endpoints.rs  main.rs  method.rs  pg_func.rs
src/service/asset_price/: Cargo.toml  asset_price_client.rs  lib.rs  main.rs  pg_func.rs  update_price.rs
src/service/auth/: Cargo.toml  endpoints.rs  lib.rs  main.rs  method.rs  pg_func.rs
src/service/escrow_watcher/: main.rs
src/service/escrow_watcher/tracker/: deposit.rs  escrow.rs  mod.rs
src/service/shared/: endpoints.rs  enums.rs  method.rs  pg_func.rs  shared_method.rs
src/service/shared/api/: Cargo.toml  cmc.rs  lib.rs
src/service/shared/audit/: a001_top25.rs  a002_immutable_tokens.rs  a003_tokens_no_more_than_10_percent.rs  a004_user_whitelisted_wallet_same_network.rs  mod.rs
src/service/shared/eth-sdk/: Cargo.toml
src/service/shared/eth-sdk/src/: address_table.rs  calc.rs  coins.rs  conn.rs  contract.rs  dex.rs  erc20.rs  escrow_addresses.rs  evm.rs  lib.rs  logger.rs  mock_erc20.rs  pool.rs  signer.rs  stablecoins.rs  strategy_pool_herald_addresses.rs  strategy_wallet_herald_addresses.rs  tx.rs  utils.rs
src/service/shared/eth-sdk/src/contract_wrappers/: ens.rs  erc20.rs  escrow.rs  mock_erc20.rs  mod.rs  new_escrow.json  new_escrow.rs  pancake_swap.rs  strategy_pool.json  strategy_pool.rs  strategy_pool_factory.rs  strategy_pool_herald.json  strategy_pool_herald.rs  strategy_wallet.json  strategy_wallet.rs  strategy_wallet_herald.json  strategy_wallet_herald.rs  wrapped_token.rs
src/service/shared/eth-sdk/src/dex_tracker/: mod.rs  parse.rs
src/service/shared/eth-sdk/src/dex_tracker/pancake_swap/: mod.rs  pancake.rs  v2.rs
src/service/shared/eth-sdk/src/dex_tracker/pancake_swap/v3/: multi_hop.rs  single_hop.rs
src/service/shared/eth-sdk/src/escrow_tracker/: deposit.rs  escrow.rs  mod.rs
src/service/shared/eth-sdk/src/pancake_swap/: mod.rs  pair_paths.rs  v2.rs
src/service/shared/eth-sdk/src/pancake_swap/execute/: mod.rs  smart_router.rs
src/service/shared/eth-sdk/src/pancake_swap/parse/: mod.rs  smart_router_parser.rs
src/service/shared/eth-sdk/src/pancake_swap/parse/v3/: multi_hop.rs  single_hop.rs
src/service/shared/eth-sdk/src/pancake_swap/v3/: mod.rs  smart_router.rs
src/service/shared/evm/: calldata.rs  mod.rs  tx.rs
src/service/shared/evm/rpc_provider/: connection.rs  mod.rs  pool.rs
src/service/shared/execution-engine/: Cargo.toml
src/service/shared/execution-engine/src/: copy_trade.rs  lib.rs
src/service/trade_watcher/: main.rs  pg_func.rs
src/service/trade_watcher/rpc_provider/: connection.rs  mod.rs  pool.rs
src/service/trade_watcher/tracker/: calldata.rs  ethabi_to_web3.rs  mod.rs  pancake.rs  pancake_swap.rs  parse.rs  trade.rs  trading_pair.rs  tx.rs
src/service/trade_watcher/tracker/pancake_swap/: pancake.rs  v2.rs
src/service/trade_watcher/tracker/pancake_swap/v3/: multi_hop.rs  single_hop.rs
src/service/user/: Cargo.toml  audit.rs  back_strategy.rs  endpoints.rs  lib.rs  main.rs  method.rs  pg_func.rs  test_helper.rs
src/service/watcher/: Cargo.toml  copy_trade.rs  evm.rs  lib.rs  main.rs  method.rs  pg_func.rs
src/service/watcher/contract_wrappers/: escrow.rs  mod.rs  strategy_pool.rs  strategy_pool_factory.rs
src/service/watcher/dex_tracker/: mod.rs  parse.rs
src/service/watcher/dex_tracker/pancake_swap/: pancake.rs  v2.rs
src/service/watcher/dex_tracker/pancake_swap/v3/: multi_hop.rs  single_hop.rs
src/service/watcher/escrow_tracker/: deposit.rs  escrow.rs  mod.rs
src/service/watcher/tracker/: escrow.rs  mod.rs  trade.rs  tx.rs
src/service/watcher/tracker/pancake_swap/: pancake.rs  v2.rs
src/service/watcher/tracker/pancake_swap/v3/: single_hop.rs
tests/: test_admin.rs  test_asset_price.rs  test_auth.html  test_auth.rs  test_populate_db.rs  test_user.rs  test_watcher.rs
tests/tools/: mod.rs
