[package]
name = "mc2fi"
version = "0.1.0"

[workspace]
resolver = "2"
members = [
    "src/service/shared/eth-sdk",
    "src/service/shared/crypto",
    "src/service/shared/api",
    "src/service/auth",
    "src/service/user",
    "src/service/admin",
    "src/service/watcher",
    "src/lib",
    "src/gen",
]
