[package]
name = "mc2fi_asset_price"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.35"
tokio = { version = "1", features = ["full"] }
secrecy = { version = "0.8.0", features = ["serde"] }
async-trait = "*"
gen = { path = "../../gen" }
lib = { path = "../../lib" }
api = { path = "../shared/api" }
itertools = "0.10.5"

[features]
default = []
no-github-ci-tests = []

[[bin]]
name = "mc2fi_asset_price"
path = "main.rs"

[lib]
name = "mc2fi_asset_price"
path = "lib.rs"
