[package]
name = "mc2fi_watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.35"
hex = "0.4.3"
dashmap = "5.3.4"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
tower = "0.4.13"
crossbeam = "*"
reqwest = { version = "*", default-features = false, features = [
	"rustls-tls",
	"serde_json",
	"json",
] }
tokio-tungstenite = { version = "*", features = ["rustls-tls-webpki-roots"] }
itertools = "0.10.3"
futures = "*"
serde_json = "*"
peroxide = "*"
chrono = "*"
deadpool-postgres = "*"
model = { path = "../../model" }
gen = { path = "../../gen" }
lib = { path = "../../lib" }
bytes = "*"
web3 = { version = "0.18", features = ["signing"] }
secp256k1 = "0.21.3"
rand = "0.8.5"
num = "0.4"
axum = { version = "0.6.20", default-features = false, features = [
	"http1",
	"json",
	"matched-path",
	"original-uri",
	"tokio",
] }
axum-server = { version = "0.5.0", features = ["tls-rustls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
deadpool = { version = "0.9.5", features = ["managed", "rt_tokio_1"] }
async-trait = "*"
crypto = { path = "../shared/crypto" }
eth-sdk = { path = "../shared/eth-sdk" }
api = { path = "../shared/api" }
mc2fi_auth = { path = "../auth" }
mc2fi_user = { path = "../user" }
execution-engine = { path = "../shared/execution-engine" }
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
[dependencies.uuid]
version = "1.1.2"
features = [
	"v4",                # Lets you generate random UUIDs
	"fast-rng",          # Use a faster (but still sufficiently random) RNG
	"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
	"serde",             # Enable serde support
]
[features]
default = []
no-github-ci-tests = []

[lib]
name = "mc2fi_watcher"
path = "lib.rs"

[[bin]]
name = "mc2fi_watcher"
path = "main.rs"
