[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.1"
reqwest = { version = "*", default-features = false, features = [
	"rustls-tls",
	"serde_json",
	"json",
	"gzip",
	"deflate",
] }
serde_json = "*"
web3 = "*"
tokio = { version = "1", features = ["full"] }
# gen = { path = "../../../gen" }

[lib]
path = "lib.rs"
