[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.1"
reqwest = { version = "*", default-features = false, features = [
	"rustls-tls",
	"serde_json",
	"json",
	"gzip",
	"deflate",
] }
serde_json = "*"
web3 = "*"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "*"
lib = { path = "../../../lib" }
lru = "0.10.0"
chrono = "0.4.24"
gen = { path = "../../../gen" }
serde_path_to_error = "0.1.11"
[lib]
path = "lib.rs"
