[package]
name = "execution-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { version = "*", features = ["signing"] }
eyre = "*"
tokio = { version = "1", features = ["full"] }
secp256k1 = { version = "*", features = ["global-context", "rand"] }
crypto = { path = "../crypto" }
async-trait = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tracing-log = "*"
tracing = "*"
hex = "*"
k256 = "*"
rand = "0.6.5"
once_cell = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
bytes = "*"
deadpool = { version = "0.9.5", features = ["managed", "rt_tokio_1"] }
gen = { path = "../../../gen" }
lib = { path = "../../../lib" }
http = "*"
chrono = "0.4.24"
eth-sdk = { path = "../eth-sdk" }
api = { path = "../api" }
itertools = "0.10.5"
num = "0.4.0"